[gd_scene load_steps=9 format=3 uid="uid://6f7f3ik8hlfv"]

[ext_resource type="Script" path="res://Scenes/mini_games/laptop/laptop_mini_game.gd" id="1_mdm6b"]
[ext_resource type="Texture2D" uid="uid://rpdjh6s3x3m2" path="res://Assets/Sprites/room_1_custom_placeholders/Red Background.png" id="2_a45ph"]
[ext_resource type="Texture2D" uid="uid://t0fto8k5duub" path="res://Assets/StanfordAssets/custom-illustrations-stanford-monuments-assets-12.png" id="3_fku8c"]

[sub_resource type="LabelSettings" id="LabelSettings_aep5h"]
font_size = 72

[sub_resource type="LabelSettings" id="LabelSettings_khtax"]
font_size = 32

[sub_resource type="LabelSettings" id="LabelSettings_3x5dv"]
font_size = 30
font_color = Color(1, 1, 1, 0.803922)

[sub_resource type="LabelSettings" id="LabelSettings_hkkht"]
font_size = 28
font_color = Color(0, 0, 0, 1)

[sub_resource type="LabelSettings" id="LabelSettings_7l6lw"]
font_size = 32
font_color = Color(0, 0, 0, 1)

[node name="LaptopMiniGame" type="Node2D"]
script = ExtResource("1_mdm6b")

[node name="ColorRect" type="ColorRect" parent="."]
offset_right = 1920.0
offset_bottom = 1078.0
color = Color(0.0941176, 0.0941176, 0.0941176, 1)

[node name="Screen" type="ColorRect" parent="."]
offset_left = 22.0
offset_top = 17.0
offset_right = 1900.0
offset_bottom = 1060.0
color = Color(0.0666667, 0.380392, 0.615686, 1)

[node name="Login" type="Node2D" parent="."]

[node name="Username" type="LineEdit" parent="Login"]
offset_left = 784.0
offset_top = 578.0
offset_right = 1132.0
offset_bottom = 609.0

[node name="Password" type="LineEdit" parent="Login"]
offset_left = 782.0
offset_top = 656.0
offset_right = 1132.0
offset_bottom = 687.0

[node name="BigText" type="Label" parent="Login"]
offset_left = 540.0
offset_top = 291.0
offset_right = 1372.0
offset_bottom = 393.0
text = "CME EMPLOYEE LAPTOP"
label_settings = SubResource("LabelSettings_aep5h")
horizontal_alignment = 1

[node name="Button" type="Button" parent="Login"]
modulate = Color(0.741176, 0.768627, 0.764706, 1)
offset_left = 868.0
offset_top = 716.0
offset_right = 1044.0
offset_bottom = 762.0
text = "Sign In"

[node name="Feedback" type="Label" parent="Login"]
visible = false
offset_left = 803.0
offset_top = 806.0
offset_right = 1106.0
offset_bottom = 859.0
text = "Incorrect Login Info"
label_settings = SubResource("LabelSettings_khtax")
horizontal_alignment = 1
vertical_alignment = 1

[node name="UsernameText" type="Label" parent="Login"]
offset_left = 881.0
offset_top = 528.0
offset_right = 1030.0
offset_bottom = 573.0
text = "Username"
label_settings = SubResource("LabelSettings_3x5dv")

[node name="PasswordText" type="Label" parent="Login"]
offset_left = 886.0
offset_top = 610.0
offset_right = 1035.0
offset_bottom = 655.0
text = "Password"
label_settings = SubResource("LabelSettings_3x5dv")

[node name="Files" type="Node2D" parent="."]
visible = false

[node name="File1" type="TextureButton" parent="Files"]
offset_left = 138.0
offset_top = 244.0
offset_right = 2388.0
offset_bottom = 2494.0
scale = Vector2(0.1, 0.1)
texture_normal = ExtResource("3_fku8c")

[node name="File2" type="TextureButton" parent="Files"]
offset_left = 546.0
offset_top = 234.0
offset_right = 2796.0
offset_bottom = 2484.0
scale = Vector2(0.1, 0.1)
texture_normal = ExtResource("3_fku8c")

[node name="File3" type="TextureButton" parent="Files"]
offset_left = 925.0
offset_top = 237.0
offset_right = 3175.0
offset_bottom = 2487.0
scale = Vector2(0.1, 0.1)
texture_normal = ExtResource("3_fku8c")

[node name="File4" type="TextureButton" parent="Files"]
offset_left = 1323.0
offset_top = 226.0
offset_right = 3573.0
offset_bottom = 2476.0
scale = Vector2(0.1, 0.1)
texture_normal = ExtResource("3_fku8c")

[node name="FileRead" type="ColorRect" parent="Files"]
offset_left = 710.0
offset_top = 523.0
offset_right = 1113.0
offset_bottom = 952.0
color = Color(1, 0.988235, 0.498039, 1)

[node name="FileText" type="Label" parent="Files"]
offset_left = 744.0
offset_top = 551.0
offset_right = 1082.0
offset_bottom = 920.0
text = "placeholder text"
label_settings = SubResource("LabelSettings_hkkht")

[node name="Print" type="Button" parent="Files"]
modulate = Color(0, 1, 0, 1)
offset_left = 1200.0
offset_top = 870.0
offset_right = 1330.0
offset_bottom = 927.0
text = "PRINT"

[node name="PrintFeedback" type="Label" parent="Files"]
offset_left = 1189.0
offset_top = 654.0
offset_right = 1444.0
offset_bottom = 777.0
label_settings = SubResource("LabelSettings_7l6lw")
horizontal_alignment = 1
vertical_alignment = 1

[node name="PowerButton" type="TextureButton" parent="."]
offset_left = 1645.0
offset_top = 245.0
offset_right = 3565.0
offset_bottom = 1325.0
scale = Vector2(0.025, 0.05)
texture_normal = ExtResource("2_a45ph")

[connection signal="pressed" from="Login/Button" to="." method="_on_button_pressed"]
[connection signal="pressed" from="Files/Print" to="." method="_on_print_pressed"]
[connection signal="pressed" from="PowerButton" to="." method="_on_power_button_pressed"]
